Fix the layout Issue with hero component on small screens.

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -828,6 +828,13 @@ a {
     align-self: center;
   }
 }
+
+@media screen and (max-width: 350px) {
+  .hero .btn {
+    padding: 3rem 8rem;
+    font-size: 1.5rem;
+  }
+}
 /* Domain */
 .domain__list {
   align-items: center;
